# fitness_workout_tracker_api_rust

./: .gitignore  Cargo.toml  README.md  diesel.toml  package-lock.json  package.json
migrations/2024-12-27-061351_create_users/: down.sql  up.sql
migrations/2024-12-27-130600_create_sessions/: down.sql  up.sql
migrations/2024-12-27-135300_create_temp_sessions/: down.sql  up.sql
migrations/2024-12-28-184000_create_workouts/: down.sql
migrations/2024-12-30-184000_create_workouts/: up.sql
migrations/2024-12-31-004300_create_exercises/: down.sql  up.sql
migrations/sqlite/2024-12-27-060943_create_users/: up.sql
scripts/: run_postman_tests.sh
src/: lib.rs  main.rs  schema.rs
src/db/: config.rs
src/middleware/: csrf.rs  mod.rs  session.rs
src/models/: exercise.rs  mod.rs  session.rs  temp_session.rs  user.rs  workout.rs  workout_exercise.rs
src/repositories/: auth_repository.rs  exercise_repository.rs  mod.rs  user_repository.rs  workout_exercise_repository.rs  workout_repository.rs
src/routes/: auth.rs  auth_tests.rs  exercise.rs  exercise_tests.rs  general.rs  general_tests.rs  mod.rs  users.rs  workout.rs  workout_exercise.rs  workout_exercise_tests.rs  workout_tests.rs
src/tests/: mod.rs
tests/postman/: fitness_workout_tracker_api.postman_collection.json  fitness_workout_tracker_api_auth.postman_collection.json  fitness_workout_tracker_api_exercises.postman_collection.json  fitness_workout_tracker_api_general.postman_collection.json  fitness_workout_tracker_api_workouts.postman_collection.json  local.postman_environment.json
