[package]
name = "fitness_workout_tracker_api_rust"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = "0.4"
sqlx = { version = "0.8.2", features = [
    "runtime-tokio",
    "tls-native-tls",
    "any",
    "postgres",
    "sqlite",
] }
dotenvy = "0.15"
