[package]
name = "fitness_workout_tracker_api_rust"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
diesel = { version = "2.1", features = ["postgres", "sqlite", "r2d2", "chrono", "uuid"] }
dotenvy = "0.15"
uuid = { version = "1.6", features = ["serde", "v4"] }
